[package]
name = "rusty_aes"
version = "0.1.0"
authors = ["Penn Wilbert <pwilbert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"              # Random number generators and other randomness functionality. 
log4rs = "*"
log = "*"